    prefixes. (tucu)

    HADOOP-10881. Clarify usage of encryption and encrypted encryption
    key in KeyProviderCryptoExtension. (wang)

    HADOOP-10770. KMS add delegation token support. (tucu)

    HADOOP-10698. KMS, add proxyuser support. (tucu)

    HADOOP-8896. Javadoc points to Wrong Reader and Writer classes 
    in SequenceFile (Ray Chiang via aw)

  OPTIMIZATIONS

    HADOOP-10838. Byte array native checksumming. (James Thomas via todd)

    HADOOP-10696. Add optional attributes to KeyProvider Options and Metadata.
    (tucu)

    HADOOP-10695. KMSClientProvider should respect a configurable timeout.
    (yoderme via tucu)

    HADOOP-10757. KeyProvider KeyVersion should provide the key name.
    (asuresh via tucu)

    HADOOP-10769. Create KeyProvider extension to handle delegation tokens.
    (Arun Suresh via atm)

    HADOOP-10812. Delegate KeyProviderExtension#toString to underlying
    KeyProvider. (wang)

    HADOOP-10736. Add key attributes to the key shell. (Mike Yoder via wang)

    HADOOP-10824. Refactor KMSACLs to avoid locking. (Benoy Antony via umamahesh)

    HADOOP-10841. EncryptedKeyVersion should have a key name property.
    (asuresh via tucu)

    HADOOP-10842. CryptoExtension generateEncryptedKey method should
    receive the key name. (asuresh via tucu)

    HADOOP-10750. KMSKeyProviderCache should be in hadoop-common.
    (asuresh via tucu)

    HADOOP-10720. KMS: Implement generateEncryptedKey and decryptEncryptedKey
    in the REST API. (asuresh via tucu)

    HADOOP-10891. Add EncryptedKeyVersion factory method to
    KeyProviderCryptoExtension. (wang)

    HADOOP-10756. KMS audit log should consolidate successful similar requests.
    (asuresh via tucu)

    HADOOP-10793. KeyShell args should use single-dash style. (wang)

    HADOOP-10936. Change default KeyProvider bitlength to 128. (wang)

    HADOOP-10224. JavaKeyStoreProvider has to protect against corrupting
    underlying store. (asuresh via tucu)

  BUG FIXES
